tests/snapshots/examples_fixtures/type_system__failing__138_match_scrutinee_constraint_propagates.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/138_match_scrutinee_constraint_propagates.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `mystery_value`.

  examples/type_system/failing/138_match_scrutinee_constraint_propagates.flx:2:13
  |
2 |     let x = mystery_value
  |             ^^^^^^^^^^^^^

Hint:
  Define it first: let mystery_value = ...;


error[E300]: Annotation Type Mismatch

The value of `y` does not match its type annotation.

  examples/type_system/failing/138_match_scrutinee_constraint_propagates.flx:3:21
  |
3 |     let y: String = match x {
  |                     ^^^^^^^^^
  |            ------ but `y` was annotated as `String`
4 |         Some(n) -> n,
  | ^^^^^^^^^^^^^^^^^^^^^
5 |         None -> 0,
  | ^^^^^^^^^^^^^^^^^^
6 |     }
  | ^^^^^

Note:
  annotated type: String
  value type: Int

Help:
  Try `to_string(...)` to convert a `Int` into a `String`.

Found 2 errors.
== stdout ==
<not executed>
