tests/snapshots/examples_fixtures/type_system__failing__13_effect_pure_calls_io.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/13_effect_pure_calls_io.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Performing `print` requires effect `Console` in this function signature.

  examples/type_system/failing/13_effect_pure_calls_io.flx:8:5
  |
8 |     print(x)
  |     ^^^^^^^^
  |     -------- effectful perform occurs here

Hint:
  Add `with Console` to the enclosing function.
== stdout ==
<not executed>
