tests/snapshots/examples_fixtures/type_system__failing__140_recursive_self_reference_return_precision.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/140_recursive_self_reference_return_precision.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Annotation Type Mismatch

The value of `value` does not match its type annotation.

  examples/type_system/failing/140_recursive_self_reference_return_precision.flx:36:25
   |
36 |     let value: String = countdown(2)
   |                         ^^^^^^^^^^^^
   |                         ------------ this value has type `Int`

   |                ------ but `value` was annotated as `String`

Note:
  annotated type: String
  value type: Int

Help:
  Try `to_string(...)` to convert a `Int` into a `String`.
== stdout ==
<not executed>
