tests/snapshots/examples_fixtures/type_system__failing__142_match_bool_missing_true.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/142_match_bool_missing_true.flx
== compile ==
failed (compile)
== diagnostics ==
error[E015]: Non-Exhaustive Match

Match is non-exhaustive: missing Bool case(s): true.

  examples/type_system/failing/142_match_bool_missing_true.flx:4:14
  |
4 |     let _x = match b {
  |              ^^^^^^^^^
5 |         false -> 0
  | ^^^^^^^^^^^^^^^^^^
6 |     }
  | ^^^^^

Hint:
  Add missing boolean arms or an unguarded `_ -> ...` catch-all.
== stdout ==
<not executed>
