tests/snapshots/examples_fixtures/type_system__failing__147_constructor_pattern_arity_none_too_many.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/147_constructor_pattern_arity_none_too_many.flx
== compile ==
failed (compile)
== diagnostics ==
error[E015]: Non-Exhaustive Match

Match is not exhaustive: 1 missing pattern.

  examples/type_system/failing/147_constructor_pattern_arity_none_too_many.flx:48:14
   |
48 |     let _y = match x {
   |              ^^^^^^^^^
49 |         NoneI(v) -> v,
   | ^^^^^^^^^^^^^^^^^^^^^^
50 |         SomeI(n) -> n,
   | ^^^^^^^^^^^^^^^^^^^^^^
51 |     }
   | ^^^^^

Hint:
  Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.


error[E085]: Constructor Pattern Arity Mismatch

Constructor pattern `NoneI` expects 0 argument(s) but got 1.

  examples/type_system/failing/147_constructor_pattern_arity_none_too_many.flx:49:9
   |
49 |         NoneI(v) -> v,
   |         ^^^^^^^^

Hint:
  Check the constructor's declared pattern field count.

Found 2 errors.
== stdout ==
<not executed>
